adjusting ops with new parameters; run experiments for 10m

--- a/ops/run_experiment.yaml
+++ b/ops/run_experiment.yaml
@@ -79,8 +79,9 @@
   any_errors_fatal: true
   serial: 1
   vars:
-    - server_threads: 1
     - keys: 1000
+    - server_threads: 1
+    - log_metrics: "false"
     - experiment_path: /tmp/parallel-SMR
     - run_cmd: "java -cp dist/BFT-SMaRt-Parallel.jar:lib/bft-smart.jar:lib/slf4j-api-1.5.8.jar:lib/slf4j-jdk14-1.5.8.jar:lib/netty-all-4.0.36.Final.jar:lib/commons-codec-1.5.jar:lib/metrics-core-4.1.8.jar"
   tasks:
@@ -94,8 +95,8 @@
     - name: run server
       shell:
         chdir: "{{ experiment_path }}"
-        cmd: "{{ run_cmd }} demo.dict.DictServer '{{ id }}' '{{ server_threads }}' '{{ keys }}'"
-      async: 600 # 10m
+        cmd: "{{ run_cmd }} demo.dict.DictServer '{{ id }}' '{{ server_threads }}' '{{ keys }}' '{{ log_metrics }}'"
+      async: 900 # 15m
       poll: 0
       when: not ansible_check_mode
       tags:
@@ -108,20 +109,28 @@
   any_errors_fatal: true
   serial: "{{ groups['clients'] | length }}"
   vars:
-    - experiment_path: /tmp/parallel-SMR
+    - keys: 1000
     - client_threads: 64
     - ops_per_request: 50
-    - keys: 1000
-    - duration_sec: 300
-    - key_sparseness: 0.3
-    - conflict_percent: 0.3
+    - duration_sec: 600
+    - key_sparseness: 0.5
+    - conflict_percent: 0.5
+    - log_metrics: "false"
+    - experiment_path: /tmp/parallel-SMR
     - run_cmd: "java -cp dist/BFT-SMaRt-Parallel.jar:lib/bft-smart.jar:lib/slf4j-api-1.5.8.jar:lib/slf4j-jdk14-1.5.8.jar:lib/netty-all-4.0.36.Final.jar:lib/commons-codec-1.5.jar:lib/metrics-core-4.1.8.jar"
   tasks:
+    - name: ensure no old files
+      file:
+        path: "{{ experiment_path }}/metrics"
+        state: absent
+      tags:
+        - run
+        - clients
     - name: run client
       shell:
         chdir: "{{ experiment_path }}"
-        cmd: "{{ run_cmd }} demo.dict.DictClient '{{ (id|int * 1000) + 4001 }}' '{{ client_threads }}' '{{ ops_per_request }}' '{{ keys }}' '{{ duration_sec }}' '{{ key_sparseness }}' '{{ conflict_percent }}'"
-      async: 600 # 10m
+        cmd: "{{ run_cmd }} demo.dict.DictClient '{{ (id|int * 1000) + 4001 }}' '{{ client_threads }}' '{{ ops_per_request }}' '{{ keys }}' '{{ duration_sec }}' '{{ key_sparseness }}' '{{ conflict_percent }}' '{{ log_metrics }}'"
+      async: 900 # 15m
       poll: 10
       when: not ansible_check_mode
       tags:
