--- a/ops/run_experiment.yaml
+++ b/ops/run_experiment.yaml
@@ -81,7 +81,7 @@
   vars:
     - keys: 1000
     - server_threads: 1
-    - cost_per_op_ms: 1
+    - cost_per_op_ns: 4000 # 4 micros
     - log_metrics: "false"
     - scheduler_type: "POOLED"
     - experiment_path: /tmp/parallel-SMR
@@ -97,7 +97,7 @@
     - name: run server
       shell:
         chdir: "{{ experiment_path }}"
-        cmd: "{{ run_cmd }} demo.dict.DictServer '{{ id }}' '{{ server_threads }}' '{{ keys }}' '{{ cost_per_op_ms }}' '{{ log_metrics }}' '{{ scheduler_type }}'"
+        cmd: "{{ run_cmd }} demo.dict.DictServer '{{ id }}' '{{ server_threads }}' '{{ keys }}' '{{ cost_per_op_ns }}' '{{ log_metrics }}' '{{ scheduler_type }}'"
       async: 900 # 15m
       poll: 0
       when: not ansible_check_mode
@@ -113,10 +113,10 @@
   vars:
     - keys: 1000
     - client_threads: 1
-    - ops_per_request: 35
+    - ops_per_request: 50
     - duration_sec: 600
-    - key_sparseness: 0.5
-    - conflict_percent: 0.5
+    - key_sparseness: 1
+    - conflict_percent: 0
     - log_metrics: "false"
     - experiment_path: /tmp/parallel-SMR
     - run_cmd: "java -cp dist/BFT-SMaRt-Parallel.jar:lib/bft-smart.jar:lib/slf4j-api-1.5.8.jar:lib/slf4j-jdk14-1.5.8.jar:lib/netty-all-4.0.36.Final.jar:lib/commons-codec-1.5.jar:lib/metrics-core-4.1.8.jar"
